--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;500;600;700&family=Seymour+One&display=swap');
 #root {
-  max-width: 1280px;
+  width: 1280px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
+}
+
+body {
+  font-family: 'Nunito', sans-serif;
+}
+
+h1 {
+  font-family: 'Seymour One', sans-serif;
 }
 
 .logo {
@@ -39,4 +48,9 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.pokemon-container {
+  width: 100%;
+  padding: 20px;
 }
